crates/vihaco/tests/compile_fail/composite_machine/header-with-device.rs
struct HeaderDevice;

#[vihaco::composite]
struct BadMachine {
    #[header]
    #[device(0x01)]
    header: HeaderDevice,
}

fn main() {}
